--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
 <h1>Hello World</h1>
+
+# Header 1
+## Header 2
+### Header 3
+
+- Bulleted
+- List
+
+1. Numbered
+2. List
+
+**Bold** and _Italic_ and `Code` text
+
+[www.npr.org](www.npr.org) and ![Image](src)
